--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vicons/ionicons5": "^0.13.0",
     "naive-ui": "^2.42.0",
     "pinia": "^3.0.3",
+    "three": "^0.179.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
